# Mortis

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
include/Mortis/: Config.hpp  HookMacro.hpp  ImportHook.hpp  Inject.hpp  InlineHook.hpp  MemoryScanner.hpp  Mortis.hpp  Process.hpp  Result.hpp
include/Mortis/Arch/: ARM64.hpp  X64.hpp
include/Mortis/Detail/: CompileSignature.hpp  HookBackend.hpp  ImportHookImpl.hpp  MemberFnAddress.hpp  SlotPool.hpp  TypeTraits.hpp
include/Mortis/Hook/: CodePatcher.hpp  Disassembler.hpp  HookRegistry.hpp  InstructionRelocator.hpp  ThreadFreezer.hpp  TrampolineAllocator.hpp  TrampolineWriter.hpp
include/Mortis/Platform/: LinuxUtils.hpp  PlatformTypes.hpp  Win32Utils.hpp
src/Arch/ARM64/: DisassemblerARM64.cpp  InstructionRelocatorARM64.cpp  TrampolineWriterARM64.cpp
src/Arch/X64/: DisassemblerX64.cpp  InstructionRelocatorX64.cpp  TrampolineWriterX64.cpp
src/Core/: MemoryScanner.cpp  Process.cpp
src/Hook/: CodePatcher.cpp  Disassembler.cpp  HookBackendCapstone.cpp  TrampolineAllocator.cpp
src/Platform/Linux/: ImportHookLinux.cpp  ProcessLinux.cpp  ThreadFreezerLinux.cpp
src/Platform/Win32/: ImportHookWin32.cpp  InjectWin32.cpp  ProcessWin32.cpp  ThreadFreezerWin32.cpp
tests/: InjectionDll.cpp  InjectionDll.def  InjectionTarget.cpp  TestCore.cpp  TestHelpers.cpp  TestHelpers.hpp  TestHookMacro.cpp  TestHookRobustness.cpp  TestImportHook.cpp  TestInject.cpp  TestInlineHook.cpp  TestMemory.cpp  TestMemoryScanner.cpp  TestProcess.cpp
